# simple-logger

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  slog.pc.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: slogConfig.cmake.in
docs/: deep-dive.md
examples/: CMakeLists.txt  README.md  custom_levels.cpp  custom_prefix.cpp  error_handling.cpp  files.cpp  modules.cpp  multiprocess.cpp  multithread.cpp  quickstart.cpp  stdout_control.cpp  tags.cpp
examples/config/: config_demo.cpp  run_with_env.sh  simplelog.conf
examples/consume/copied_sources/: build.sh
examples/consume/prebuilt/: app.cpp  build.sh
include/slog/: slog.h  testing.h
src/: config.cpp  error.cpp  format.cpp  internal.h  level.cpp  logger.cpp  run_dir.cpp  sink.cpp
tests/: CMakeLists.txt  doctest.h  doctest_main.cpp  hdr_no_short.cpp  hdr_slog_alone.cpp  hdr_testing_alone.cpp  no_exceptions.cpp  slog_helper.cpp  strip_check.cpp  test_audit_fixes.cpp  test_concurrency.cpp  test_config.cpp  test_disable.cpp  test_errors.cpp  test_files.cpp  test_format.cpp  test_headers.cpp  test_levels.cpp  test_lifecycle.cpp  test_multiproc.cpp  test_perf.cpp  test_rate_limit.cpp  test_resolution.cpp  test_retention.cpp  test_stdout.cpp  test_util.h
tests/consume/: app.cpp  run_consume.sh
